WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283478
[WebAuthn] Transports are not lexicographically sorted
https://bugs.webkit.org/show_bug.cgi?id=283478
Summary
[WebAuthn] Transports are not lexicographically sorted
shinkieun
Reported
2024-11-21 03:17:11 PST
When testing with Safari v17.5, I got following transports ["internal", "hybrid"] when creating the passkey with iCloud Keychain. The spec defines that the transports MUST be lexicographical ordered. See followings links. -
https://w3c.github.io/webauthn/#dom-authenticatorattestationresponse-transports-slot
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2024-11-23 10:59:40 PST
Thank you for the report. 17.5 its quite old, are you still seeing this with up to date Safari versions?
shinkieun
Comment 2
2024-11-24 22:00:38 PST
I can't update the Safari due to corporate device's policy at the moment.
Radar WebKit Bug Importer
Comment 3
2024-11-28 03:18:13 PST
<
rdar://problem/140655335
>
EWS
Comment 4
2025-01-14 12:49:55 PST
Committed
288881@main
(4f798717acc1): <
https://commits.webkit.org/288881@main
> Reviewed commits have been landed. Closing PR #37321 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug