[WebAuthn] Transports are not lexicographically sorted rdar://140655335 https://bugs.webkit.org/show_bug.cgi?id=283478

Reviewed by Charlie Wolfe.

Fixes an instance in our platform authenticator where
transports are not lexiographically sorted.

* Source/WebKit/UIProcess/WebAuthentication/Cocoa/LocalAuthenticator.mm:
(WebKit::LocalAuthenticatorInternal::transports):
The shouldUpdateQuery flag is no longer needed, but requires an Internal
commit to remove properly. I've filed 283918 to clean that up.

Canonical link: https://commits.webkit.org/288881@main